Finished / reviewed section 8 homework; appended any necessary revisions per solutions guide

--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -1172,14 +1172,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 358,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, 7, 11, 13, 17, 19, 23]"
+      ]
+     },
+     "execution_count": 358,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def count_primes(num):\n",
-    "    pass\n",
+    "    primes = [2]\n",
+    "    x = 3\n",
+    "    while x <= num:\n",
+    "        for y in range (3,x,2):\n",
+    "            if x % y == 0:\n",
+    "                x += 2\n",
+    "                break\n",
+    "        else:\n",
+    "            primes.append(x)\n",
+    "            x += 2\n",
+    "    return (primes)\n",
+    "\n",
+    "count_primes(25)\n",
+    "                \n",
+    "\n",
     "                "
    ]
   },
@@ -1213,14 +1238,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 425,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  *  \n",
+      " * * \n",
+      "*****\n",
+      "*   *\n",
+      "*   *\n",
+      "None\n",
+      "**** \n",
+      "*   *\n",
+      "**** \n",
+      "*   *\n",
+      "**** \n",
+      "None\n",
+      "*****\n",
+      "*    \n",
+      "*    \n",
+      "*    \n",
+      "*****\n",
+      "None\n",
+      "  *  \n",
+      " * * \n",
+      "*****\n",
+      "*   *\n",
+      "*   *\n",
+      "**** \n",
+      "*   *\n",
+      "**** \n",
+      "*   *\n",
+      "**** \n",
+      "*****\n",
+      "*    \n",
+      "*    \n",
+      "*    \n",
+      "*****\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None, None, None]"
+      ]
+     },
+     "execution_count": 425,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "**** \n",
+      "*   *\n",
+      "**** \n",
+      "*   *\n",
+      "**** \n"
+     ]
+    }
+   ],
    "source": [
+    "# def print_big(*args):\n",
+    "#     letterdict = {\n",
+    "#             # \"a\" : \"\"\"  *\n",
+    "#             #      * *\n",
+    "#             #  *****\n",
+    "#             #  *   *\n",
+    "#             #  *   *\"\"\"\n",
+    "#             \"a\" : {\n",
+    "#                 \"l1\": '  *  ',\n",
+    "#                 \"l2\": ' * *',\n",
+    "#                 \"l3\": '*****',\n",
+    "#                 \"l4\": '*   *',\n",
+    "#                 \"l5\": '*   *'\n",
+    "#             },\n",
+    "#             \"b\" : {\n",
+    "#                 \"l1\": '***',\n",
+    "#                 \"l2\": '*  *',\n",
+    "#                 \"l3\": '***',\n",
+    "#                 \"l4\": '*  *',\n",
+    "#                 \"l5\": '***'\n",
+    "#             }\n",
+    "#         }\n",
+    "#     keylist = []\n",
+    "#     for dictkey in letterdict.keys():\n",
+    "#         keylist.append(dictkey)\n",
+    "#     print(keylist)\n",
+    "\n",
+    "#     if args in keylist:\n",
+    "#         print(letterdict.key[args], letterdict.item)\n",
+    "#     # for arg in args:\n",
+    "\n",
+    "    #     for l_key, l_contents in letterdict.items():\n",
+    "    #         print(l_key, l_contents)\n",
+    "    #         for key in l_contents:\n",
+    "    #             print (key, l_contents[key])\n",
+    "    #         # #print(l_id)\n",
+    "            # for args in l_contents:\n",
+    "            #     #print(key + ':', l_contents[key])\n",
+    "            #     print(l_contents[args])\n",
+    "# print_big(\"b\")\n",
+    "\n",
+    "\n",
+    "# correct answer\n",
     "def print_big(letter):\n",
-    "    pass"
+    "    patterns = {1:'  *  ',2:' * * ',3:'*   *',4:'*****',5:'**** ',6:'   * ',7:' *   ',8:'*   * ',9:'*    '}\n",
+    "    alphabet = {'A':[1,2,4,3,3],'B':[5,3,5,3,5],'C':[4,9,9,9,4],'D':[5,3,3,3,5],'E':[4,9,4,9,4]}\n",
+    "    for pattern in alphabet[letter.upper()]:\n",
+    "        print(patterns[pattern])\n",
+    "\n",
+    "my_letters = ['a','b','c']\n",
+    "for item in map(print_big, my_letters):\n",
+    "    print(item)\n",
+    "list(map(print_big, my_letters))\n",
+    "print_big(\"b\")"
    ]
   },
   {
