--- a/03-Methods and Functions/08-Functions and Methods Homework.ipynb
+++ b/03-Methods and Functions/08-Functions and Methods Homework.ipynb
@@ -25,19 +25,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 377,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def vol(rad):\n",
-    "    pass"
+    "    return ((4 / 3) * 3.14 * (rad**3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 379,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "33.49333333333333"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 379,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,27 +66,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 114,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# def convert_to_string(*args):\n",
+    "#     for arg in args:\n",
+    "#         arg = str(arg)\n",
+    "#     return args\n",
+    "\n",
+    "# def ensure_int(fn):\n",
+    "#     def wrapper(*args):\n",
+    "#         for arg in args:\n",
+    "#             arg = str(arg)\n",
+    "#         return fn(*args)\n",
+    "#     return wrapper\n",
+    "\n",
+    "\n",
+    "# def ensure_int(fn):\n",
+    "#     def wrapper(num):\n",
+    "#         return fn(int(num))\n",
+    "#     return wrapper\n",
+    "\n",
+    "#     def convert_to_string(**kwargs):\n",
+    "#     for arg in kwargs:\n",
+    "#         arg = str(arg)\n",
+    "#     return kwargs\n",
+    "\n",
+    "# def ran_check(num,low,high):\n",
+    "\n",
+    "#     if low <= num <= high:\n",
+    "#         # convert_to_string(num, low, high)\n",
+    "#         # num = str(num)\n",
+    "#         # low = str(low)\n",
+    "#         # high = str(high)\n",
+    "#         return (f\"{num} is in the range between {low} and {high}\")\n",
+    "\n",
+    "    # /// PREVIOUS ATTEMPTS\n",
+    "    # return type(locals())\n",
+    "    # str(locals())\n",
+    "    # convert_to_string(saved_args)\n",
+    "        # @ensure_int\n",
+    "        # def true_statement(num,low,high):\n",
+    "        # convert_to_string(num, low, high)\n",
+    "    #     # num = str(num)\n",
+    "    #     # low = str(low)\n",
+    "    #     # high = str(high)\n",
+    "\n",
     "def ran_check(num,low,high):\n",
-    "    pass"
+    "\n",
+    "    if low <= num <= high:\n",
+    "        return (f\"{num} is in the range between {low} and {high}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Provided answer (both correct)\n",
+    "\n",
+    "def ran_check(num,low,high):\n",
+    "    #Check if num is between low and high (including low and high)\n",
+    "    if num in range(low,high+1):\n",
+    "        print('{} is in the range between {} and {}'.format(num,low,high))\n",
+    "    else:\n",
+    "        print('The number is outside the range.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 is in the range between 2 and 7\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'5 is in the range between 2 and 7'"
+      ]
+     },
+     "execution_count": 115,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -103,19 +167,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 116,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def ran_bool(num,low,high):\n",
-    "    pass"
+    "    if low <= num <= high:\n",
+    "        return True\n",
+    "    else: \n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +191,7 @@
        "True"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,34 +219,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 132,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def up_low(s):\n",
-    "    pass"
+    "    uppers = 0\n",
+    "    lowers = 0\n",
+    "    for i in s:\n",
+    "        if i.isupper():\n",
+    "            uppers += 1\n",
+    "        elif i.islower(): \n",
+    "            lowers += 1\n",
+    "        else:\n",
+    "            pass\n",
+    "    totals = [uppers, lowers]\n",
+    "    print(\"Number of letters:\\n\", \"Upper: \", uppers, \"\\n\", \"Lowers: \", lowers)\n",
+    "\n",
+    "    # print(f\"Original String: {s}\")\n",
+    "    # print(f\"Lowercase count: {lowers}\")\n",
+    "    # print(f\"Uppercase count: {uppers}\")\n",
+    "\n",
+    "    # *totals, sep=\"\\n\")\n",
+    "    #dont use \\n with f-string; \n",
+    "    # (ex.) print('Winners are:\\n{}'.format('\\n'.join(names)))\n",
+    "    # (ex. 2) print('Winners are:', *names, sep='\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%time\n",
+    "def upper_lower(s):\n",
+    "    uppers = sum(1 for c in s if c.isupper())\n",
+    "    lowers = sum(1 for c in s if c.islower())\n",
+    "    print(uppers, lowers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using a dictionary\n",
+    "\n",
+    "def up_low2(s):\n",
+    "    d = {'upper': 0, 'lower': 0}\n",
+    "    for i in s:\n",
+    "        if i.isupper():\n",
+    "            d['upper'] += 1\n",
+    "        elif i.islower(): \n",
+    "            d['lower'] += 1\n",
+    "        else:\n",
+    "            pass\n",
+    "\n",
+    "    print(f\"Original String: {s}\")\n",
+    "    print(f\"Lowercase count: {d['upper']}\")\n",
+    "    print(f\"Uppercase count: {d['lower']}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 382,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original String :  Hello Mr. Rogers, how are you this fine Tuesday?\n",
-      "No. of Upper case characters :  4\n",
-      "No. of Lower case Characters :  33\n"
+      "Original String: Hello Mr. Rogers, how are you this fine Tuesday\n",
+      "Lowercase count: 4\n",
+      "Uppercase count: 33\n",
+      "CPU times: total: 0 ns\n",
+      "Wall time: 0 ns\n"
      ]
     }
    ],
    "source": [
-    "s = 'Hello Mr. Rogers, how are you this fine Tuesday?'\n",
-    "up_low(s)"
+    "%%time\n",
+    "s = 'Hello Mr. Rogers, how are you this fine Tuesday'\n",
+    "up_low2(s)"
    ]
   },
   {
@@ -195,19 +320,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 383,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def unique_list(lst):\n",
-    "    pass"
+    "    new_list = []\n",
+    "    for i in lst:\n",
+    "        if i in new_list:\n",
+    "            pass\n",
+    "        else:\n",
+    "            new_list.append(i)\n",
+    "    return new_list\n",
+    "\n",
+    "#more concise\n",
+    "def unique_list2(lst):\n",
+    "    return list(set(lst))\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 384,
    "metadata": {},
    "outputs": [
     {
@@ -216,13 +352,13 @@
        "[1, 2, 3, 4, 5]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 384,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "unique_list([1,1,1,1,2,2,3,3,3,3,4,5])"
+    "unique_list2([1,1,1,1,2,2,3,3,3,3,4,5])"
    ]
   },
   {
@@ -238,19 +374,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 385,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "from operator import index\n",
+    "\n",
+    "\n",
     "def multiply(numbers):  \n",
-    "    pass"
+    "    x = 0\n",
+    "    max = len(numbers) - 1\n",
+    "    if 0 in numbers:\n",
+    "        return \"Total: 0\"\n",
+    "    else: \n",
+    "        for x in range(0, max, 1):\n",
+    "            if x == 0:\n",
+    "                product = numbers[x] * numbers[x + 1]\n",
+    "            else: \n",
+    "                product = product * numbers[x + 1]\n",
+    "        return product\n",
+    "\n",
+    "\n",
+    "# CORRECTION VIA SOLUTIONS\n",
+    "\n",
+    "def multiply2(numbers):\n",
+    "    total = 1\n",
+    "    for num in numbers: \n",
+    "        total = total * num\n",
+    "    return total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 304,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +417,7 @@
        "-24"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,19 +438,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 305,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def palindrome(s):\n",
-    "    pass"
+    "    reversed_s = s[::-1]\n",
+    "    if s == reversed_s:\n",
+    "        return True\n",
+    "    else: \n",
+    "        return False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 395,
    "metadata": {},
    "outputs": [
     {
@@ -301,13 +463,82 @@
        "True"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 395,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "palindrome('helleh')"
+    "palindrome('helleh helleh')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 396,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 396,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "palindrome('hello')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 390,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "item 1 (firstword) is not a palindrome\n",
+      "item 2 (olo) is a palindrome\n",
+      "item 3 (helleh) is a palindrome\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'end of list'"
+      ]
+     },
+     "execution_count": 390,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check a list for palindromes\n",
+    "\n",
+    "def palindrome_checker(s):\n",
+    "    new_list = []\n",
+    "    if type(s) != list:\n",
+    "        return \"Not a list\"\n",
+    "    else: \n",
+    "        for item in s:\n",
+    "            item = item[::-1]\n",
+    "            new_list.append(item)\n",
+    "    i = 0\n",
+    "    while i < len(s):\n",
+    "        if s[i] == new_list[i]:\n",
+    "            print(f'item {i + 1} ({s[i]}) is a palindrome')\n",
+    "        else: \n",
+    "            print(f'item {i + 1} ({s[i]}) is not a palindrome')\n",
+    "        i+= 1\n",
+    "    else: \n",
+    "        return \"end of list\"\n",
+    "        \n",
+    "palindrome_checker([\"firstword\", \"olo\", \"helleh\"])"
    ]
   },
   {
@@ -331,41 +562,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 393,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import string\n",
+    "import re\n",
     "\n",
-    "def ispangram(str1, alphabet=string.ascii_lowercase):\n",
-    "    pass"
+    "# from regex import Regex\n",
+    "\n",
+    "# def ispangram(str1, alphabet=string.ascii_lowercase):\n",
+    "#     pass\n",
+    "\n",
+    "def ispangram(str1):\n",
+    "    alphabet = sorted(list(string.ascii_lowercase))\n",
+    "    str1 = str1.lower()\n",
+    "    str1 = re.sub(\"[^a-z]\", \"\", str1)\n",
+    "    str1 = sorted(list(set(str1)))\n",
+    "    \n",
+    "#    str1 = rgx.Replace(str1, \"\")\n",
+    "\n",
+    "    \n",
+    "    print(alphabet)\n",
+    "    print(str1)\n",
+    "\n",
+    "    if alphabet == str1:\n",
+    "        return \"it's a pangram\"\n",
+    "    else:\n",
+    "        return \"not a pangram\"\n",
+    "\n",
+    "     \n",
+    "# ascii lowercase to list\n",
+    "# my string to list(set(mylist))\n",
+    "# sort list alphabetically?\n",
+    "# compare lists; if lista != listb, return false\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 394,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "['a', 'b', 'c']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "True"
+       "'not a pangram'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 394,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ispangram(\"The quick brown fox jumps over the lazy dog\")"
+    "ispangram(\"acCb\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 391,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n",
+      "['a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j', 'k', 'l', 'm', 'n', 'o', 'p', 'q', 'r', 's', 't', 'u', 'v', 'w', 'x', 'y', 'z']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"it's a pangram\""
+      ]
+     },
+     "execution_count": 391,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ispangram(\"The quick BBrown fox jumps over the lazy dog!!232\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 376,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +667,7 @@
        "'abcdefghijklmnopqrstuvwxyz'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 376,
      "metadata": {},
      "output_type": "execute_result"
     }
