Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -44,7 +44,7 @@
     "\n",
     "Lists: Lists are similar to the strings but the only difference is these can be mutable \n",
     "\n",
-    "Tuples: These are the collection of an unordered unique objects. and these are immutable in nature\n",
+    "Tuples: These are similar to the Lists but immutable in nature\n",
     "\n",
     "Dictionaries: it contailn a key pair instead of indexing, objects are associated with the key pair. these can not be sorted like lists\n"
    ]
