00-Python: Fix content of set() task
This task is not about finding unique values in a list, but creating a set.

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -392,7 +392,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use a set to find the unique values of the list below:"
+    "Use a set to create the unique values of the list below:"
    ]
   },
   {
