--- a/03-Methods and Functions/03-Function Practice Exercises.ipynb
+++ b/03-Methods and Functions/03-Function Practice Exercises.ipynb
@@ -42,23 +42,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 26,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def lesser_of_two_evens(a,b):\n",
-    "    pass"
+    "    if a%2==0 and b%2==0:\n",
+    "        if a < b:\n",
+    "            result = a\n",
+    "        else:\n",
+    "            result = b\n",
+    "    else:\n",
+    "        if a < b:\n",
+    "            result = b\n",
+    "        else:\n",
+    "            result = a\n",
+    "    return result\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "lesser_of_two_evens(2,4)"
@@ -66,11 +83,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "lesser_of_two_evens(2,5)"
@@ -87,23 +113,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 31,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def animal_crackers(text):\n",
+    "    word = text.split()\n",
+    "    if word[0][0]==word[1][0]:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "animal_crackers('Levelheaded Llama')"
@@ -111,11 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "animal_crackers('Crazy Kangaroo')"
@@ -134,23 +182,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def makes_twenty(n1,n2):\n",
+    "    if n1 + n2 == 20 or n1 == 20 or n2 == 20:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "makes_twenty(20,10)"
@@ -158,11 +217,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "makes_twenty(2,3)"
@@ -188,23 +256,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 52,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def old_macdonald(name):\n",
-    "    pass"
+    "    a = name[0].capitalize()\n",
+    "    b = name[3].capitalize()\n",
+    "    return a + name[1:3] + b + name[4:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'MacDonald'"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "old_macdonald('macdonald')"
@@ -232,23 +309,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 67,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def master_yoda(text):\n",
-    "    pass"
+    "    a = text.split()\n",
+    "    return \" \".join(a[::-1])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'home am I'"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "master_yoda('I am home')"
@@ -256,11 +341,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ready are We'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Check\n",
     "master_yoda('We are ready')"
@@ -708,7 +802,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -722,7 +816,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
